# druenne-naegely-tetris

./: .gitignore  CMakeLists.txt  README.md  notes.md
src/: AITetrisPlayer.c  AITetrisPlayer.h  Tetromino.c  Tetromino.h  main  main.c  rendering.c  rendering.h  tetris  tetris_logic.c  tetris_logic.h  tetromino.c  tetromino.h
